@@ -18,6 +18,7 @@ For a detailed view of what has changed, refer to the {uri-repo}/commits/master[
 Bug Fixes::
 
   * Ensure mtime of input file honors TZ environment variable on JRuby for Windows (affects value of docdatetime attribute) (#3550)
+  * Honor caption attribute on blocks that support captioned title even if corresponding *-caption document attribute is not set (#4023)
 
 Improvements::
 
